--- a/public/views/login.hbs
+++ b/public/views/login.hbs
@@ -5,15 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
-    <link rel="stylesheet" href="/stylesheets/login-style.css">
+        <link rel="stylesheet"  href="./stylesheets/home.css">
+    <link rel="stylesheet" type="text/css"  href="./stylesheets/login-style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
+        <div class="nav">
+            <img src="./images/logo.jpeg" alt=""/>
+            <a class="hactive" href="home.html"><b>Home</b></a>
+            <a href="./Register" ><b>Register</b></a>
+            <a href="./Login"><b>Login</b></a>
+            <a href="/About"><b>About Us</b></a>
+            </div>
         <div class="background">
             <div class="text">
                 <h1>Login</h1>
-                <p>No Account? <a href="/register">Sign up</a></p>
+                <p>Don't have an Account? <a href="register.html">Register</a></p>
             </div>
             <div class="box">
                 <form class="form">
@@ -23,6 +31,13 @@
                 </form>
             </div>
         </div>
+        <div class="footer">
+            <img src="./images/facebook.png" alt=""/>
+            <img src="./images/twitter.png" alt=""/>
+            <img src="./images/insta.jpg" alt=""/>
+            <p>Copyright © 2021 Techcare. All rights reserved.</p>
+    <p>Mail Us: techcare@gmail.com</p>
+           </div>
     </main>
 </body>
 </html>
