--- a/public/views/aboutL.hbs
+++ b/public/views/aboutL.hbs
@@ -11,11 +11,32 @@
 <body>
     <main>
         <div class="nav">
-            <img src="./images/logo.jpeg" alt=""/>
-            <a class="hactive" href="home.html"><b>Home</b></a>
-            <a href="./Register" ><b>Register</b></a>
-            <a href="./Login"><b>Login</b></a>
-            <a href="/About"><b>About Us</b></a>
+           <img src="./images/logo.jpeg" alt=""/>
+            <a class="hactive" href="/after_login"><b>Home</b></a>
+            <div class="dropdown">
+                <button class="dropbtn">Tutorials 
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="basic.html">Basic</a>
+                  <a href="food.html">Food</a>
+                  <a href="shopping.html">Shopping</a>
+                  <a href="medical.html">Medical</a>
+                  <a href="payments.html">Payments</a>
+                  <a href="tickets.html">Tickets</a>
+                  <a href="fitness.html">Fitness</a>
+                  <a href="social.html">Social</a>
+                  <a href="business.html">Business</a>
+                  <a href="entertainment.html">Entertainment</a>
+                  <a href="parental.html">Parental</a>
+                  <a href="security.html">Security</a>
+                </div>
+              </div> 
+              
+              <a href="/enquiry" ><b>Enquiry</b></a>
+              <a href="logout.html"><b>Logout</b></a>
+             <a  href="/aboutL"><b>About Us</b></a>
+
             </div>
             <div class="Acontainer">
                 We, the developers of <b>Techcare.com</b>, are a team of coder girls called <b>"SHE Coders"</b>.We <br></br>
