--- a/public/views/home.hbs
+++ b/public/views/home.hbs
@@ -12,10 +12,10 @@
 <body>
 <div class="nav">
 <img src="./images/logo.jpeg" alt=""/>
-<a class="hactive" href="home.html"><b>Home</b></a>
+<a class="hactive" href="/"><b>Home</b></a>
 <a href="/register" ><b>Register</b></a>
 <a href="/login"><b>Login</b></a>
-<a href="/About"><b>About Us</b></a>
+<a href="/about"><b>About Us</b></a>
 </div>
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
