--- a/public/views/login.hbs
+++ b/public/views/login.hbs
@@ -13,15 +13,15 @@
     <main>
         <div class="nav">
             <img src="./images/logo.jpeg" alt=""/>
-            <a class="hactive" href="home.html"><b>Home</b></a>
-            <a href="./Register" ><b>Register</b></a>
-            <a href="./Login"><b>Login</b></a>
-            <a href="/About"><b>About Us</b></a>
+            <a class="hactive" href="/"><b>Home</b></a>
+            <a href="/register" ><b>Register</b></a>
+            <a href="/login"><b>Login</b></a>
+            <a href="/about"><b>About Us</b></a>
             </div>
         <div class="background">
             <div class="text">
                 <h1>Login</h1>
-                <p>Don't have an Account? <a href="register.html">Register</a></p>
+                <p>Don't have an Account? <a href="/register">Register</a></p>
             </div>
             <div class="box">
                 <form class="form" method="post" action="/login">
