--- a/public/views/home2.hbs
+++ b/public/views/home2.hbs
@@ -9,7 +9,7 @@
 <body>
 <div class="nav">
 <img src="./images/logo.jpeg" alt=""/>
-<a class="hactive" href="home2.html"><b>Home</b></a>
+<a class="hactive" href="/after_login"><b>Home</b></a>
 <div class="dropdown">
     <button class="dropbtn">Tutorials 
       <i class="fa fa-caret-down"></i>
@@ -29,9 +29,9 @@
       <a href="security.html">Security</a>
     </div>
   </div> 
-<a href="enquiry.html" ><b>Enquiry</b></a>
+<a href="/enquiry" ><b>Enquiry</b></a>
 <a href="logout.html"><b>Logout</b></a>
-<a href="about.html"><b>About Us</b></a>
+<a href="/aboutL"><b>About Us</b></a>
 </div>
 <div class="container2"><h1>welcome Back!!!</h1>
     <p>Let's get started. Click on the icons(boxes) below to explore our tutorials on different fields.<br></br>
